[package]
name = "library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.16.0", features = ["persistence"]}
serde = { version = "1.0.136", features = ["derive"]}
whoami = "1.2.1"
bincode = "1.3.3"
rfd = { version = "0.8.1", default-features = false, features = ["xdg-portal"]}
lazy_static = "1.4.0"
image = "0.24.1"
open = "2.1.1"
random-string = "1.0.0"

[[bin]]
name = "viewer"
path = "src/viewer.rs"
